<resources>
    <string name="app_name">bankapp</string>

    <string name="my_bank">My Bank</string>

    <!-- login activity -->
    <string name="login_touch_id">Login with Touch Screen!</string>
    <string name="login_tap">Please tap to verify identity</string>
    <string name="protect_label">We protect your finances all safer</string>

    <!-- balance activity -->
    <string name="balance_label">Balance</string>
    <string name="income_label">Income</string>
    <string name="income_expend">Expend</string>

    <!-- dummy incomes -->
    <string-array name="incomes">
        <item>Check deposited</item>
        <item>Payment received</item>
        <item>Investments</item>
        <item>Gratuity</item>
    </string-array>

    <!-- dummy expends -->
    <string-array name="expends">
        <item>Rent</item>
        <item>Payment done</item>
        <item>Credit card payment</item>
        <item>Gas</item>
        <item>Groceries</item>
    </string-array>
</resources>
